[gd_scene load_steps=2 format=3 uid="uid://bdbgrdh13wotj"]

[ext_resource type="Script" uid="uid://ddpo80wpe4r7n" path="res://addons/simulation_interface/simulation_interface.gd" id="1_picg5"]

[node name="SimulationInterface" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_picg5")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Agent Count"

[node name="AgentCountSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1.04858e+06
value = 1024.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Scenario" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Agent Count"

[node name="ScenarioOption" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "LONG_RANGE_CONSTRAINT"
popup/item_0/id = 0
popup/item_1/text = "OPPOSING_AGENTS"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Max Velocity"

[node name="MaxVelocitySpinbox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1.04858e+06
value = 16.0
rounded = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Radius"

[node name="RadiusSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 64.0
value = 16.0
rounded = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Window X"

[node name="WindowXSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1000.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Window Y"

[node name="WindowYSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1000.0

[node name="RenderingCheckBox" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Disable Rendering"

[node name="SaveCheckBox" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save Simulation"

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Simulation"
